# Sonus

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: companion-release.yml
SonusCompanion/: CHANGELOG.md  README.md  build_app.sh
SonusCompanion/SonusCompanion/: AppState.swift  AppUpdateController.swift  AppVersion.swift  AudioPlayer.swift  BackendManager.swift  EmbeddedBackendConfig.swift  GitHubReleaseClient.swift  HotkeyManager.swift  Info.plist  LaunchAtLoginManager.swift  Logger.swift  MenuBarView.swift  ModelManager.swift  QwenAddonManager.swift  QwenModelManager.swift  SelectedTextReader.swift  SettingsView.swift  SonusClient.swift  SonusCompanionApp.swift  StreamingAudioPlayer.swift  TextPreprocessor.swift  TextRuleStore.swift  TextRulesSettingsView.swift  UpdateConfig.swift  UpdateDownloader.swift  (+1 more)
SonusCompanion/SonusCompanion.xcodeproj/: project.pbxproj
docs/: ARCHITECTURE.md  COMPANION.md  DECISIONS.md  DEVLOG.md  PRODUCT.md  ROADMAP.md  SYSTEM_VOICE_RESEARCH.md  TEXT_RULES.md
scripts/: bundle-python-runtime.sh  bundle-qwen-addon.sh  download-models.sh  download-qwen3-model.sh  simulate-qwen-engine-switch.sh  verify-embedded-runtime.sh
tests/: conftest.py  test_api.py  test_audio_encode.py  test_cache.py  test_engine_manager.py  test_logging_config.py  test_model_status.py  test_openai_api.py  test_openai_compat.py  test_qwen_engine_stability.py  test_schemas.py  test_service.py  test_stream_service.py  test_text_split.py  test_voices.py  test_zh_g2p.py
(+39 files in other folders)
