[project]
name = "sonus"
version = "0.1.0"
description = "Universal local TTS service with a stable, model-agnostic HTTP API"
readme = "README.md"
authors = [
    { name = "xinchao.gou", email = "xinchao.gou@anyverse.com" }
]
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.136.3",
    "kokoro-onnx>=0.5.0",
    "misaki-fork[zh]>=0.9.6",
    "numpy>=2.4.6",
    "pydantic-settings>=2.14.1",
    "pydub>=0.25.1",
    "soundfile>=0.14.0",
    "typer>=0.26.7",
    "uvicorn[standard]>=0.49.0",
    "pyyaml>=6.0.2",
]

[project.scripts]
sonus = "sonus.cli:main"

[project.optional-dependencies]
qwen = [
    "qwen-tts>=0.1.1",
    "huggingface_hub>=0.36.0",
]

[build-system]
requires = ["uv_build>=0.11.17,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.4.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "auto"
